cleaned up variable names in js; added an image to index; corrected js file to display all entries; changed index file to display entries as bullets; changed headers to link to bootstrap styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div class="container">
-      <h1>Fill in the blanks make a list of your five favorite things:</h1>
+      <img src="img/juliea.jpeg" alt="A picture of Julie Andrews">
+      <h3>Fill in the blanks make a list of your five favorite things:</h3>
       <div id="blanks">
         <form>
           <div class="form-group">
@@ -38,9 +39,19 @@
       </div>
 
       <div id="list">
-              <h1>You made a great list!</h1>
-              <p>One, <span class="favorite1"></span> two <span class="favorite2"></span> three <span class="favorite3"></span>  four <span class="favorite4"></span> five <span class="favorite5"></span></p>
+      <ul>
+        <li><span class="favorite1"></span></li>
+        <li><span class="favorite2"></span></li>
+        <li><span class="favorite3"></span></li>
+        <li><span class="favorite4"></span></li>
+        <li><span class="favorite5"></span></li>
+      </ul>
+      </div>
+
+
+              <h3>You made a great list!</h3>
+
+
             </div>
-          </div>
         </body>
       </html>
