--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <div class="container">
-      <img src="img/juliea.jpeg" alt="A picture of Julie Andrews">
+      <img style="margin:0px auto;display:block" src="img/juliea.jpeg"alt="A picture of Julie Andrews"/>
       <h3>Fill in the blanks make a list of your five favorite things:</h3>
       <div id="blanks">
         <form>
           <div class="form-group">
-            <label for="favorite1">Your first favorite thing</label>
+            <label for="favorite1">Your first favorite thing?</label>
             <input id="favorite1" class="form-control" type="text">
           </div>
           <div class="form-group">
@@ -51,7 +51,7 @@
 
               <h3>You made a great list!</h3>
 
-
+       <p>To learn more about programming classes at Epicodus, follow this link:  <a href="http://www.epicodus.com">I link to www.epicodus.com.</a></p>
             </div>
         </body>
       </html>
