--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
       <img style="margin:0px auto;display:block" src="img/juliea.jpeg"alt="A picture of Julie Andrews"/>
+      <audio src="img/myfavoritethings.mid" controls></audio>
       <h3>Fill in the blanks make a list of your five favorite things:</h3>
       <div id="blanks">
         <form>
